<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/categories">
    <fragment
        android:id="@+id/categories"
        android:name="com.david.ardfmanager.category.Categories_fragment"
        android:label="@string/title_tracks"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/competitors"
        android:name="com.david.ardfmanager.competitors.Competitors_fragment"
        android:label="@string/title_competitors"
        tools:layout="@layout/fragment_competitors" />
    <fragment
        android:id="@+id/readouts"
        android:name="com.david.ardfmanager.readouts.Readouts_fragment"
        android:label="@string/title_readouts"
        tools:layout="@layout/fragment_readouts" />
    <fragment
        android:id="@+id/results"
        android:name="com.david.ardfmanager.results.Results_fragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />
    <fragment
        android:id="@+id/controlPointsFragment"
        android:name="com.david.ardfmanager.controlpoint.ControlPoints_Fragment"
        android:label="@string/title_control_points"
        tools:layout="@layout/fragment_control_points" />
</navigation>
